--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.1.9",
     "@types/node": "20.2.5",
     "@types/react-dom": "18.2.4",
+    "@uiw/codemirror-theme-vscode": "^4.21.3",
+    "@uiw/react-codemirror": "^4.21.3",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
