--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.4",
     "@uiw/codemirror-theme-vscode": "^4.21.3",
     "@uiw/react-codemirror": "^4.21.3",
+    "assert": "^2.0.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
